--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
     "react-countup": "^6.4.2",
@@ -16,6 +17,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-scroll-trigger": "^0.6.14",
     "web-vitals": "^2.1.4"
   },
